test: CI/CD 파이프라인 추가 및 테스트 환경 수정